# pico-waveshare

./: .gitignore  .gitmodules  README.md  picoinfo.txt
RP2040-Touch-LCD-1.28-LVGL/: CMakeLists.txt
RP2040-Touch-LCD-1.28-LVGL/examples/: CMakeLists.txt
RP2040-Touch-LCD-1.28-LVGL/examples/inc/: lv_conf.h
RP2040-Touch-LCD-1.28-LVGL/examples/src/: ImageData.c  LCD_1in28_LVGL_test.c  LVGL_example.c
RP2040-Touch-LCD-1.28-LVGL/lib/LCD/: LCD_1in28.c
RP2040-Touch-LCD-1.28-LVGL/lib/Touch/: CST816S.h
RP2040-Touch-LCD-1.28-LVGL/uf2/: RP2040-Touch-LCD-1.28.uf2
blink/: CMakeLists.txt  blink.c
canvas/: CMakeLists.txt  ascii.c  ascii.h  canvas.c  canvas.h  device.c  device.h  framework.h  main.c
canvas/lib/Config/: CMakeLists.txt  DEV_Config.c  DEV_Config.h
canvas/lib/LCD/: LCD_1in28.h
canvas/lib/Touch/: CST816S.h
canvastest/: CMakeLists.txt  canvas.c  canvas.h  main.c
canvastest/lib/LCD/: LCD_1in28.c
canvastest/lib/Touch/: CST816S.c
cdjwatch/: CMakeLists.txt  logo_cdj_belgium_transparent_100_100.c  logo_cdj_belgium_transparent_100_100.h  lv_conf.h  main.c
cdjwatch/lib/Config/: DEV_Config.c
cdjwatch/lib/LCD/: LCD_1in28.h
cdjwatch/lib/QMI8658/: QMI8658.c  QMI8658.h
cdjwatch/lib/Touch/: CST816S.c  CST816S.h
cdjwatch/lib/lvgl/: CMakeLists.txt  Makefile
lvgltest/: main.c
lvgltest/examples/inc/: ImageData.h  LCD_test.h  LVGL_example.h
lvgltest/lib/Config/: DEV_Config.c
lvgltest/lib/LCD/: LCD_1in28.h
lvgltest/lib/Touch/: CST816S.c
lvgltest/lib/lvgl/: cmake_install.cmake
matrix/: CMakeLists.txt  font8.h  matrix.c  pico7219.c  pico7219.h  pico_extras_import.cmake
